Fix game GIFs not showing up

--- a/arcade.css
+++ b/arcade.css
@@ -35,7 +35,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 1000px;
-  gap: 24px;
+  gap: 72px;
 }
 
 #games-display img {
@@ -75,8 +75,17 @@ body {
   width: 50%;
 }
 
+.long-strip {
+  border: 4px solid black;
+  background-color: #a0cbfd;
+  height: 8px;
+  border-radius: 8px;
+  width: 50%;
+}
+
 .game-description{
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 16px;
 }
